dbent-derive/tests/ui/entity_label_struct_unnamed_fields.stderr
error: #[derive(Label)] can only be used on structs with named fields
 --> tests/ui/entity_label_struct_unnamed_fields.rs:5:12
  |
5 | struct Test(Key<Int>, #[label] String);
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^
