dbent-derive/tests/ui/entity_label_struct_unnamed_fields.rs

use dbent::prelude::*;

#[derive(Label)]
struct Test(Key<Int>, #[label] String);

fn main() {}
